added note about elastic search